--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -210,6 +210,38 @@
             font-size: 3.4rem;
         }
     }
+
+    .accordion {
+        .accordion-item {
+            background-color: transparent;
+            border: 0;
+            border-bottom: 1px solid $white;
+            padding: 10px 0;
+
+            .accordion-button {
+                font-size: 2.4rem;
+                color: $white;
+                font-weight: 700;
+                background-color: transparent;
+
+                &:not(.collapsed) {
+                    box-shadow: unset;
+                }
+                
+                &::after {
+                    filter: brightness(0) invert(1);
+                }
+            }
+
+            .accordion-body {
+                color: $white;
+                font-size: 1.8rem;
+            }
+            
+        }
+        
+        
+    }
 } 
 
 .sec-refs {
