--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -13,10 +13,6 @@ html {
   font-size: 1.6rem;
 }
 
-[hidden] {
-  display: block !important;
-}
-
 .sec-video {
   background-color: #84bc2c;
 }
@@ -34,6 +30,25 @@ html {
   .sec-video__title {
     font-size: 3.4rem;
   }
+}
+.sec-video__bt {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 250px;
+  font-size: 2.4rem;
+  border: 0;
+  height: 250px;
+  font-weight: 700;
+  background-color: rgba(0, 0, 0, 0.9);
+  color: #fff;
+}
+.sec-video__bt span {
+  display: block;
+  font-size: 4.8rem;
 }
 
 .sec-counter {
