--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -16,6 +16,27 @@
             font-size: 3.4rem;
         }
     }
+
+    &__bt {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        width: 250px;
+        font-size: 2.4rem;
+        border: 0;
+        height: 250px;
+        font-weight: 700;
+        background-color: rgba($black, .9);
+        color: $white;
+
+        span {
+            display: block;
+            font-size: 4.8rem;
+        }
+    }
 }
 
 .sec-counter {
