--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -15,13 +15,31 @@ $black: #000;
 	font-size: 62.5%;
 }
 
-html {
-    scroll-behavior: smooth;
-}
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-size: 1.6rem;
+}
+
+.footer {
+    background-color: $nl-dark-green;
+
+    &__lst {
+        li {
+            &::after {
+                content: "|";
+                color: $white;
+                margin-right: 15px;
+                margin-left: 10px;
+            }
+
+            &:last-child {
+                &::after {
+                    content: "";
+                }
+            }
+        }
+        
+    }
 }
