--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -1,328 +1,312 @@
 @use "_base" as *;
 
-.sec-video {
-    background-color: $nl-green-alt;
-    
-    @media (min-width: $md) {
-        min-height: 100vh;
-    }
-
-    &__title {
-        background-color: rgba($black, .25);
-        font-size: 2.2rem;
-        font-weight: 700;
-
+#pgHome {
+    .sec-video {
+        background-color: $nl-green-alt;
+        
         @media (min-width: $md) {
-            font-size: 3.4rem;
-        }
-    }
-
-    &__bt {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        margin: auto;
-        width: 150px;
-        font-size: 1.6rem;
-        border: 0; 
-        height: 150px;
-        font-weight: 700;
-        background-color: rgba($black, .9);
-        color: $white;
-
-        @media (min-width: $md) {
-            font-size: 2.4rem;
-            height: 250px;
-            width: 250px;
+            min-height: 100vh;
         }
 
-        span {
-            display: block;
-            font-size: 3.2rem;
-
-            @media (min-width: $md) {
-                font-size: 4.8rem;
-            }
-        }
-    }
-}
-
-.sec-counter {
-    background-color: $nl-dark-green;
-    position: relative;
-
-    &::before{
-        content: "";
-        display: block;
-        background-color: $nl-dark-green;
-        border: 3px solid $nl-dark-green;
-        width: 40px;
-        height: 40px;
-        position: absolute;
-        bottom: -40px;
-        left: 50%;
-        right: 50%;
-        margin: auto;
-        transform: translate(-50%, -50%) rotate(45deg);
-    }
-
-    &__title {
-        font-size: 2.2rem;
-        font-weight: 700;
-
-        @media (min-width: $md) {
-            font-size: 3.4rem;
-        }
-
-        span {
+        &__title {
+            background-color: rgba($black, .25);
             font-size: 2.2rem;
-            color: $nl-green;
+            font-weight: 700;
 
             @media (min-width: $md) {
                 font-size: 3.4rem;
             }
         }
-    }
 
-    &__timer {
-        font-size: 3.6rem;
-        font-weight: 700;
-        background-color: rgba($black, .2);
-        padding: 2.5px 25px 7.5px;
-        display: inline-block;
-        border-radius: 10px;
+        &__bt {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+            width: 150px;
+            font-size: 1.6rem;
+            border: 0; 
+            height: 150px;
+            font-weight: 700;
+            background-color: rgba($black, .9);
+            color: $white;
 
-        @media (min-width: $md) {
-            font-size: 7.2rem;
-            padding: 5px 50px 15px;
+            @media (min-width: $md) {
+                font-size: 2.4rem;
+                height: 250px;
+                width: 250px;
+            }
+
+            span {
+                display: block;
+                font-size: 3.2rem;
+
+                @media (min-width: $md) {
+                    font-size: 4.8rem;
+                }
+            }
         }
     }
-}
 
-.sec-offers {
-    background-color: #f0f0f0;
+    .sec-counter {
+        background-color: $nl-dark-green;
+        position: relative;
 
-    &__offer {
-        > li {
-            background-color: $white;
-            border: 2px solid #9F9F9F;
-            border-radius: 6px;
-            overflow: hidden;
-            box-shadow: 1px 1px 10px #9F9F9F;
+        &::before{
+            content: "";
+            display: block;
+            background-color: $nl-dark-green;
+            border: 3px solid $nl-dark-green;
+            width: 40px;
+            height: 40px;
+            position: absolute;
+            bottom: -40px;
+            left: 50%;
+            right: 50%;
+            margin: auto;
+            transform: translate(-50%, -50%) rotate(45deg);
+        }
 
-            &.best {
-                border-color: $nl-dark-green;
-                background-color: $nl-dark-green;
+        &__title {
+            font-size: 2.2rem;
+            font-weight: 700;
 
-                .sec-offers__offer__title {
-                    background-color: $white;
-                    color: $nl-dark-green;
-                    font-weight: 700;
-                }
+            @media (min-width: $md) {
+                font-size: 3.4rem;
+            }
 
-                .sec-offers__offer__price-un {
-                    color: $white;
-                }
+            span {
+                font-size: 2.2rem;
+                color: $nl-green;
 
-                .sec-offers__offer__lst {
-                    li {
-                        border-color: $white;
-                        color: $white;
-
-                        span {
-                            color: $white;
-                        }
-                    }
-                }
-
-                .sec-offers__offer__btn {
-                    background-color: $nl-green-alt;
+                @media (min-width: $md) {
+                    font-size: 3.4rem;
                 }
             }
         }
 
-        &__title {
-            font-size: 2.4rem;
-            font-weight: 400;
-            background-color: #9F9F9F;
+        &__timer {
+            font-size: 3.6rem;
+            font-weight: 700;
+            background-color: rgba($black, .2);
+            padding: 2.5px 25px 7.5px;
+            display: inline-block;
+            border-radius: 10px;
 
-           span {
-            font-size: 1.6rem;
-            display: block;
-            font-weight: 400;
-           }
+            @media (min-width: $md) {
+                font-size: 7.2rem;
+                padding: 5px 50px 15px;
+            }
+        }
+    }
+
+    .sec-offers {
+        background-color: #f0f0f0;
+
+        &__offer {
+            > li {
+                background-color: $white;
+                border: 2px solid #9F9F9F;
+                border-radius: 6px;
+                overflow: hidden;
+                box-shadow: 1px 1px 10px #9F9F9F;
+
+                &.best {
+                    border-color: $nl-dark-green;
+                    background-color: $nl-dark-green;
+
+                    .sec-offers__offer__title {
+                        background-color: $white;
+                        color: $nl-dark-green;
+                        font-weight: 700;
+                    }
+
+                    .sec-offers__offer__price-un {
+                        color: $white;
+                    }
+
+                    .sec-offers__offer__lst {
+                        li {
+                            border-color: $white;
+                            color: $white;
+
+                            span {
+                                color: $white;
+                            }
+                        }
+                    }
+
+                    .sec-offers__offer__btn {
+                        background-color: $nl-green-alt;
+                    }
+                }
+            }
+
+            &__title {
+                font-size: 2.4rem;
+                font-weight: 400;
+                background-color: #9F9F9F;
+
+            span {
+                font-size: 1.6rem;
+                display: block;
+                font-weight: 400;
+            }
+            }
+
+            &__price-un {
+                font-size: 8.0rem;
+                font-weight: 700;
+                line-height: 1;
+                position: relative;
+
+                small {
+                    position: absolute;
+                    display: block;
+                    font-size: 1.6rem;
+                    font-weight: 400;
+                    bottom: 0;
+                    right: 0;
+                    left: 0;
+                    margin: auto;
+                }
+            }
+
+            &__lst {
+                li {
+                    border-top: 2px dashed #9F9F9F;
+                    font-weight: 700;
+
+                    span {
+                        color: $nl-dark-green;
+                    }
+
+                    &:last-child {
+                        border-bottom: 2px dashed #9F9F9F;
+                    }
+                }
+            }
+
+            &__btn {
+                font-size: 2.4rem;
+                font-weight: 700;
+                color: $white;
+                border: 0;
+            }
+            
+        }
+    }
+
+    .sec-guarantee {
+        background-color: $nl-green-alt;
+
+        &__content {
+            
+            @media (min-width: $md) {
+                border-radius: 20px;
+            }
+
+            &__seal {
+                
+                @media (min-width: $md) {
+                    margin-top: -100px;
+                }
+            }
+
+            &__title {
+                font-weight: 700;
+                font-size: 3.6rem;
+
+                span {
+                    font-size: 3.6rem;
+                    color: $nl-dark-green;
+                }
+            }
+
+            &__description {
+                font-size: 2.2rem;
+            }
+        }
+    }
+
+    .sec-faq {
+        background-color: $nl-green-alt;
+
+        &__title {
+            font-size: 2.2rem;
+            font-weight: 700;
+
+            @media (min-width: $md) {
+                font-size: 3.4rem;
+            }
         }
 
-        &__price-un {
-            font-size: 8.0rem;
-            font-weight: 700;
-            line-height: 1;
-            position: relative;
+        .accordion {
+            .accordion-item {
+                background-color: transparent;
+                border: 0;
+                border-bottom: 1px solid $white;
+                padding: 10px 0;
 
-            small {
-                position: absolute;
-                display: block;
-                font-size: 1.6rem;
-                font-weight: 400;
-                bottom: 0;
-                right: 0;
-                left: 0;
-                margin: auto;
+                .accordion-button {
+                    font-size: 2.4rem;
+                    color: $white;
+                    font-weight: 700;
+                    background-color: transparent;
+
+                    &:not(.collapsed) {
+                        box-shadow: unset;
+                    }
+                    
+                    &::after {
+                        filter: brightness(0) invert(1);
+                    }
+                }
+
+                .accordion-body {
+                    color: $white;
+                    font-size: 1.8rem;
+                }
+                
+            }
+            
+            
+        }
+    } 
+
+    .sec-refs {
+        background-color: #f9f9f9;
+        &__title {
+            font-size: 2.2rem;
+            font-weight: 700;
+
+            @media (min-width: $md) {
+                font-size: 3.4rem;
             }
         }
 
         &__lst {
-            li {
-                border-top: 2px dashed #9F9F9F;
-                font-weight: 700;
+            list-style-position: inside;
 
-                span {
-                    color: $nl-dark-green;
-                }
-
-                &:last-child {
-                    border-bottom: 2px dashed #9F9F9F;
+            &:first-child {
+                @media (max-width: $md) {
+                    margin-bottom: 0;
                 }
             }
         }
-
-        &__btn {
-            font-size: 2.4rem;
-            font-weight: 700;
-            color: $white;
-            border: 0;
-        }
-        
-    }
-}
-
-.sec-guarantee {
-    background-color: $nl-green-alt;
-
-    &__content {
-        
-        @media (min-width: $md) {
-            border-radius: 20px;
-        }
-
-        &__seal {
-            
-            @media (min-width: $md) {
-                margin-top: -100px;
-            }
-        }
-
-        &__title {
-            font-weight: 700;
-            font-size: 3.6rem;
-
-            span {
-                font-size: 3.6rem;
-                color: $nl-dark-green;
-            }
-        }
-
-        &__description {
-            font-size: 2.2rem;
-        }
-    }
-}
-
-.sec-faq {
-    background-color: $nl-green-alt;
-
-    &__title {
-        font-size: 2.2rem;
-        font-weight: 700;
-
-        @media (min-width: $md) {
-            font-size: 3.4rem;
-        }
     }
 
-    .accordion {
-        .accordion-item {
-            background-color: transparent;
-            border: 0;
-            border-bottom: 1px solid $white;
-            padding: 10px 0;
-
-            .accordion-button {
-                font-size: 2.4rem;
-                color: $white;
-                font-weight: 700;
-                background-color: transparent;
-
-                &:not(.collapsed) {
-                    box-shadow: unset;
-                }
-                
-                &::after {
-                    filter: brightness(0) invert(1);
-                }
-            }
-
-            .accordion-body {
-                color: $white;
-                font-size: 1.8rem;
-            }
-            
-        }
-        
-        
-    }
-} 
-
-.sec-refs {
-    background-color: #f9f9f9;
-    &__title {
-        font-size: 2.2rem;
-        font-weight: 700;
-
-        @media (min-width: $md) {
-            font-size: 3.4rem;
-        }
-    }
-
-    &__lst {
-        list-style-position: inside;
-
-        &:first-child {
-            @media (max-width: $md) {
-                margin-bottom: 0;
+    .modal {
+        form {
+            input {
+                font-size: 1.6rem;
             }
         }
     }
 }
 
-.footer {
-    background-color: $nl-dark-green;
-
-    &__lst {
-        li {
-            &::after {
-                content: "|";
-                color: $white;
-                margin-right: 15px;
-                margin-left: 10px;
-            }
-
-            &:last-child {
-                &::after {
-                    content: "";
-                }
-            }
-        }
-        
-    }
-}
-
-.modal {
-    form {
-        input {
-            font-size: 1.6rem;
-        }
-    }
+#pgDetails {
+    
 }
