--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -312,10 +312,61 @@ body#pgDetails {
 
     .sec-tks {
         &__title {
+            font-size: 5.6rem;
+            font-weight: 700;
+
+            span {
+                font-size: 5.6rem;
+                color: $nl-green-alt;
+                font-weight: 700;
+            }
+        }
+    }
+
+    .sec-product {
+        .table {
+            tr {
+                td {
+                    font-size: 3.2rem;
+                    font-weight: 700;
+
+                    span {
+                        font-size: 3.2rem;
+                    }
+                }
+            }
+        }
+    }
+
+    .sec-infos {
+        p, ul li, span, a {
+            font-size: 2.4rem;
+        }
+
+        ul {
+            list-style-position: inside;
+        }
+    }
+
+    .sec-bonus {
+        background-color: $nl-green-alt;
+
+        &__title {
+            font-weight: 700;
             font-size: 4.8rem;
 
             span {
                 font-size: 4.8rem;
+                color: $nl-dark-green;
+            }
+        }
+
+        &__description {
+            font-size: 3.6rem;
+
+            span {
+                font-size: 3.6rem;
+                font-style: italic;
             }
         }
     }
