--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -312,13 +312,21 @@ body#pgDetails {
 
     .sec-tks {
         &__title {
-            font-size: 5.6rem;
+            font-size: 3.0rem;
             font-weight: 700;
 
-            span {
+            @media (min-width: $md) {
                 font-size: 5.6rem;
+            }
+
+            span {
+                font-size: 3.2rem;
                 color: $nl-green-alt;
                 font-weight: 700;
+
+                @media (min-width: $md) {
+                    font-size: 5.6rem;
+                }
             }
         }
     }
@@ -327,12 +335,28 @@ body#pgDetails {
         .table {
             tr {
                 td {
-                    font-size: 3.2rem;
                     font-weight: 700;
 
-                    span {
+                    @media (min-width: $md) {
                         font-size: 3.2rem;
                     }
+
+                    span {
+                        
+                        @media (min-width: $md) {
+                            font-size: 3.2rem;
+                        }
+                    }
+
+                    img {
+                        width: 100px;
+
+                        @media (min-width: $md) {
+                            width: 200px;
+                        }
+                    }
+
+
                 }
             }
         }
@@ -340,7 +364,11 @@ body#pgDetails {
 
     .sec-infos {
         p, ul li, span, a {
-            font-size: 2.4rem;
+            font-size: 2.0rem;
+
+            @media (min-width: $md) {
+                font-size: 2.4rem;
+            }
         }
 
         ul {
@@ -353,20 +381,38 @@ body#pgDetails {
 
         &__title {
             font-weight: 700;
-            font-size: 4.8rem;
+            font-size: 3.6rem;
+
+            @media (min-width: $md) {
+                font-size: 4.8rem;
+            }
 
             span {
-                font-size: 4.8rem;
-                color: $nl-dark-green;
+                font-size: 3.6rem;
+
+                @media (min-width: $md) {
+                    font-size: 4.8rem;
+                }
             }
         }
 
         &__description {
-            font-size: 3.6rem;
+            font-size: 2.8rem;
+
+            @media (min-width: $md) {
+                    font-size: 3.6rem;
+                }
 
             span {
-                font-size: 3.6rem;
-                font-style: italic;
+                font-size: 2.8rem;
+
+                @media (min-width: $md) {
+                    font-size: 3.6rem;
+                }
+                
+                &:not([data-js-get-session=qtd]) {
+                    font-style: italic;
+                }
             }
         }
     }
